--- a/package.json
+++ b/package.json
@@ -25,17 +25,21 @@
     "next": "12.0.8",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.2",
     "react-query": "^3.34.16",
+    "react-toastify": "^9.0.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.5",
     "@faker-js/faker": "^6.0.0-alpha.7",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^27.4.0",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
