--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "allowJs": true,
     "incremental": true
   },
-  "include": ["next-env.d.ts", "@types/*.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "@types/*.d.ts", "**/*.ts", "**/*.tsx", "pages/_app.tsxx"],
   "exclude": ["node_modules"],
   "ts-node": {
     "compilerOptions": {
